@startuml

'--------------'
'Hidden members'
'--------------'
hide empty members

'----'
'Move'
'----'
abstract class PieceType {
    - color
    - hasBeenKickedOffTheBoard
    - isBeingPromoted
    + getName()
    + getNextPawnPromotion()
    + getValue()
    + isValidMove()
    + setPieceTypeSpecificAttributes()
}

class King {
    - {static} kingIsValidMoveRulesEngine
}

class IsValidMoveParameter {
    - chessboard
    - from
    - to
    - isOpponent
}

interface RulesEngine {
    - rules
    + addRule()
    + process()
}

interface Rule {
    + isApplicable()
    + getResult()
}

'---------'
'Relations'
'---------'
PieceType <|-down- King
King *-- KingIsValidMoveRulesEngine

KingIsValidMoveRulesEngine -up-|> RulesEngine
KingIsValidMoveRulesEngine .left[#blue].> IsValidMoveParameter

HasEmptyParametersRule -up-* KingIsValidMoveRulesEngine
IsFriendlyFireRule -up-* KingIsValidMoveRulesEngine
IsJumpingRule -up-* KingIsValidMoveRulesEngine
IsMovingIntoCheckRule -up-* KingIsValidMoveRulesEngine
KingIsValidBasicMoveRule -up-* KingIsValidMoveRulesEngine
KingIsValidCastlingRule -up-* KingIsValidMoveRulesEngine
IsNotAValidMoveRule -up-* KingIsValidMoveRulesEngine

HasEmptyParametersRule -down[#purple]-|> Rule
IsFriendlyFireRule -down[#purple]-|> Rule
IsJumpingRule -down[#purple]-|> Rule
IsMovingIntoCheckRule -down[#purple]-|> Rule
KingIsValidBasicMoveRule -down[#purple]-|> Rule
KingIsValidCastlingRule -down[#purple]-|> Rule
IsNotAValidMoveRule -down[#purple]-|> Rule

HasEmptyParametersRule -down[#green]-|> PieceTypeSharedRules
IsFriendlyFireRule -down[#green]-|> PieceTypeSharedRules
IsJumpingRule -down[#green]-|> PieceTypeSharedRules
IsMovingIntoCheckRule -down[#green]-|> PieceTypeSharedRules
KingIsValidBasicMoveRule -down[#green]-|> PieceTypeSharedRules
KingIsValidCastlingRule -down[#green]-|> PieceTypeSharedRules
IsNotAValidMoveRule -down[#green]-|> PieceTypeSharedRules

'-----'
'Notes'
'-----'
note right of KingIsValidMoveRulesEngine {
    If a king does not perform a friendly
    fire on one of its own pieces, if it's
    not jumping, if it doesn't create a check
    on itself, but it does perform a
    valid basic move or it is performing a
    valid castling move it is a valid move.
    Otherwise it's not a valid move.
}

@enduml
